src/objects/c2g__codaColumnProperty__c.object
<CustomObject>
    <description>Stores a part of the formats saved from FinancialForce print Formatter.</description>
    <fields>
        <fullName>c2g__DataFormatCode__c</fullName>
        <label>DataFormatCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DataFormat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataFormat</label>
        <referenceTo>c2g__codaFormatData__c</referenceTo>
        <relationshipLabel>Column Properties (DataFormat)</relationshipLabel>
        <relationshipName>ColumnProperties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__ListSequence__c</fullName>
        <label>ListSequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NumberBoxingSpecif__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NumberBoxingSpecif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__NumberBoxing__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NumberBoxing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TableProperty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TableProperty</label>
        <referenceTo>c2g__codaTableProperty__c</referenceTo>
        <relationshipLabel>Column Properties</relationshipLabel>
        <relationshipName>Column_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TitleFormatCode__c</fullName>
        <label>TitleFormatCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TitleFormat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TitleFormat</label>
        <referenceTo>c2g__codaFormatData__c</referenceTo>
        <relationshipLabel>Column Properties (TitleFormat)</relationshipLabel>
        <relationshipName>Column_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UseTitleFormat__c</fullName>
        <label>UseTitleFormat</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_inherit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__VocabId__c</fullName>
        <label>VocabId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__useDataFormat__c</fullName>
        <label>useDataFormat</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_inherit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Column Property</label>
    <nameField>
        <label>Column Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Column Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>